// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UsageReport Component should render null without props 1`] = `
<PanelLoading
  minHeight="400px"
/>
`;

exports[`UsageReport Component should render with overages 1`] = `
<Panel
  actions={
    Array [
      Object {
        "color": "orange",
        "content": "What counts towards usage?",
        "external": true,
        "to": "https://www.sparkpost.com/docs/getting-started/what-counts-daily-monthly-usage",
      },
    ]
  }
  title="Your Usage Report"
>
  <Panel.Section>
    <ProgressLabel
      secondaryTitle="Since 2017-08-30T00:00:00.000Z"
      title="Today"
    />
    <ProgressBar
      color="orange"
      completed={50}
    />
    <DisplayNumber
      content="1,000"
      label="Used"
      orange={true}
    />
    <DisplayNumber
      content="2,000"
      label="Daily Limit"
    />
    <Connect(SendMoreCTA) />
  </Panel.Section>
  <Panel.Section>
    <ProgressLabel
      secondaryTitle="Billing cycle: 2017-08-01T08:00:00.000Z - 2017-08-31T08:00:00.000Z"
      title="This Month"
    />
    <ProgressBar
      color="orange"
      completed={22}
    />
    <DisplayNumber
      content="11,000"
      label="Used"
      orange={true}
    />
    <DisplayNumber
      content="10,000"
      label="Included"
    />
    <DisplayNumber
      content="1,000"
      label="Extra Emails Used"
    />
    <DisplayNumber
      content="50,000"
      label="Monthly limit"
    />
  </Panel.Section>
</Panel>
`;

exports[`UsageReport Component should render with regular usage 1`] = `
<Panel
  actions={
    Array [
      Object {
        "color": "orange",
        "content": "What counts towards usage?",
        "external": true,
        "to": "https://www.sparkpost.com/docs/getting-started/what-counts-daily-monthly-usage",
      },
    ]
  }
  title="Your Usage Report"
>
  <Panel.Section>
    <ProgressLabel
      secondaryTitle="Since 2017-08-30T00:00:00.000Z"
      title="Today"
    />
    <ProgressBar
      color="orange"
      completed={50}
    />
    <DisplayNumber
      content="1,000"
      label="Used"
      orange={true}
    />
    <DisplayNumber
      content="2,000"
      label="Daily Limit"
    />
    <Connect(SendMoreCTA) />
  </Panel.Section>
  <Panel.Section>
    <ProgressLabel
      secondaryTitle="Billing cycle: 2017-08-01T08:00:00.000Z - 2017-08-31T08:00:00.000Z"
      title="This Month"
    />
    <ProgressBar
      color="orange"
      completed={2}
    />
    <DisplayNumber
      content="1,000"
      label="Used"
      orange={true}
    />
    <DisplayNumber
      content="10,000"
      label="Included"
    />
    <DisplayNumber
      content="50,000"
      label="Monthly limit"
    />
  </Panel.Section>
</Panel>
`;
